Update iOS Podfile and dependencies for Flutter compatibility
- Updated the iOS `Podfile` to resolve compatibility issues with CocoaPods.
  - Changed `use_frameworks!` to `use_frameworks! :linkage => :dynamic` to fix static framework dependency conflicts.
  - Ensured `ENABLE_BITCODE` is set to `NO` in `post_install` step.

- Cleared and reinstalled CocoaPods dependencies:
  - Removed outdated `Pods`, `Podfile.lock`, and local caches.
  - Updated CocoaPods to version 1.16.2 for improved dependency management.

- Verified Ruby environment:
  - Installed Ruby 3.3.6 via Homebrew.
  - Updated RubyGems to the latest version for better gem compatibility.

- Performed a full clean and reinitialization of the Flutter project:
  - Used `flutter clean` to reset the build environment.
  - Updated Flutter dependencies with `flutter pub get`.

- Prepared the project for successful iOS build and deployment:
  - Resolved `NoMethodError` related to `CocoaPods`.
  - Ensured iOS deployment target is set to 12.0.

--- a/carbon_app/pubspec.yaml
+++ b/carbon_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
 
   # 本地文件存取（如讀寫 JSON 文件）
   path_provider: ^2.0.15
+  csv: ^6.0.0
 
   # 本地化支持，用於多語言環境
   flutter_localizations:
@@ -57,10 +58,10 @@ flutter:
   # 啟用 Material Icons 字體
   uses-material-design: true
 
-  # 靜態資產，如圖片或 JSON 數據
+  # 靜態資產，如圖片或 csv 數據
   assets:
     - assets/images/ # 圖片資產
-    - assets/data/ # 數據文件（如 JSON）
+    - assets/data/ # 數據文件（如 csv）
 
 
   # 自定義字體
