--- a/carbon_app/ios/Podfile
+++ b/carbon_app/ios/Podfile
@@ -1,13 +1,11 @@
-# Uncomment this line to define a global platform for your project
-# platform :ios, '12.0'
+platform :ios, '12.0'
 
-# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
-ENV['COCOAPODS_DISABLE_STATS'] = 'true'
+workspace 'Runner.xcworkspace'
 
 project 'Runner', {
-  'Debug' => :debug,
-  'Profile' => :release,
-  'Release' => :release,
+  'Debug' => 'Flutter/Debug.xcconfig',
+  'Profile' => 'Flutter/Profile.xcconfig',
+  'Release' => 'Flutter/Release.xcconfig',
 }
 
 def flutter_root
@@ -28,10 +26,12 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  use_frameworks!
+  # 使用 use_frameworks! 可能導致靜態依賴問題
+  use_frameworks! :linkage => :dynamic
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+
   target 'RunnerTests' do
     inherit! :search_paths
   end
@@ -39,6 +39,8 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
+    end
   end
 end
