--- a/carbon_app/ios/Podfile
+++ b/carbon_app/ios/Podfile
@@ -1,11 +1,13 @@
+# Uncomment this line to define a global platform for your project
 platform :ios, '12.0'
 
-workspace 'Runner.xcworkspace'
+# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
+ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
-  'Debug' => 'Flutter/Debug.xcconfig',
-  'Profile' => 'Flutter/Profile.xcconfig',
-  'Release' => 'Flutter/Release.xcconfig',
+  'Debug' => :debug,
+  'Profile' => :release,
+  'Release' => :release,
 }
 
 def flutter_root
@@ -26,12 +28,10 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # 使用 use_frameworks! 可能導致靜態依賴問題
-  use_frameworks! :linkage => :dynamic
+  use_frameworks!
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-
   target 'RunnerTests' do
     inherit! :search_paths
   end
@@ -39,8 +39,6 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      config.build_settings['ENABLE_BITCODE'] = 'NO'
-    end
+    flutter_additional_ios_build_settings(target)
   end
 end
