feat: integrate favorite branch and resolve FavoriteScreen issues
- Integrated the `favorite` branch content into the current branch for feature alignment.
- Updated `_FavoriteScreenState` implementation to follow `State<T>` best practices:
  - Ensured compatibility by aligning with the `createState` method.
  - Improved structure for state management and readability.
- Fixed async context handling in `FloatingActionButton`:
  - Added `mounted` checks to ensure safe usage of `BuildContext` across async gaps.
  - Refactored code to store `ScaffoldMessenger` reference locally, improving stability.
- Renamed `readFavorite.dart` to `read_favorites.dart` to comply with Dart's naming conventions.
- Replaced `print` statements with `log` from `dart:developer` for better logging in production environments.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
 
   # 靜態資產，如圖片或 csv 數據
   assets:
-    - assets/images/Pigeon.jpeg                        # Image asset
+    - assets/images/Pigeon.jpeg # Image asset
     - assets/data/ResidentialSector_CarbonEmissions_10ktonCO2e.csv
     - assets/data/ServiceIndustry_CarbonEmissions_10ktonCO2e.csv
     - assets/data/EnergySector_CarbonEmissions_10ktonCO2e.csv
@@ -72,7 +72,7 @@ flutter:
     - assets/data/ManufacturingAndConstruction_CarbonEmissions_10ktonCO2e.csv
     - assets/data/TotalCarbonEmissions_AllSectors_10ktonCO2e.csv
     - assets/icons/
-
+    - assets/data/favorite.json
 
   # 自定義字體
   # fonts:
